cm code fe- be